<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_index"
        android:icon="@drawable/selector_menu_index"
        android:title="@string/index" />

    <item
        android:id="@+id/menu_find"
        android:icon="@drawable/selector_menu_find"
        android:title="@string/find" />

    <item
        android:id="@+id/menu_activity"
        android:icon="@drawable/selector_menu_activity"
        android:title="@string/activity" />

    <item
        android:id="@+id/menu_message"
        android:icon="@drawable/selector_menu_message"
        android:title="@string/message" />

    <item
        android:id="@+id/menu_mine"
        android:icon="@drawable/selector_menu_mine"
        android:title="@string/mine" />
</menu>
