<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="15dp"
        android:layout_gravity="center"
        android:background="@drawable/icon_agreement_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/agreement_title"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:overScrollMode="never"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp">

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="2dp"
                android:lineSpacingMultiplier="1.1"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/agreement_content"/>

        </androidx.core.widget.NestedScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_disagree"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@drawable/shape_gray_25"
                android:layout_marginLeft="50dp"
                android:gravity="center"
                android:textColor="@color/color_B7B7B7"
                android:textSize="13sp"
                android:text="@string/later"/>

            <TextView
                android:id="@+id/tv_agree"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@drawable/shape_gray_25"
                android:layout_alignParentRight="true"
                android:layout_marginRight="50dp"
                android:gravity="center"
                android:textSize="13sp"
                android:text="@string/ok"/>

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>