<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <View
        android:id="@+id/fake_status_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_bar_back"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@+id/fake_status_bar"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:src="@drawable/icon_back"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:text="@string/login_code"/>

        <com.queerlab.chat.widget.CustomEditText
            android:id="@+id/et_code"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:background="@drawable/shape_gray_25"
            android:layout_marginTop="100dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_gravity="center_horizontal"
            android:theme="@style/EditText"
            android:inputType="number"
            android:textColorHint="@color/color_4D4D4D"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:enabled="false"
            android:textColor="@drawable/select_code"
            android:textSize="14sp"
            android:text="@string/login_code_seconds"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_next"
            android:layout_width="180dp"
            android:layout_height="55dp"
            android:layout_marginTop="80dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/selector_login"
            android:enabled="false"
            android:gravity="center"
            android:textColor="@drawable/selector_text"
            android:textSize="18sp"
            android:text="@string/next"/>

    </LinearLayout>

</RelativeLayout>